--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -27,7 +27,7 @@ var translationObject = {
         "nl-NL": "Meer opties"
     },
     "creditCard.numberField.placeholder": {
-    	"en-US": ""
+    	"en-US": "[Placehold here]"
     }
 };
 
