--- a/checkout.html
+++ b/checkout.html
@@ -2,6 +2,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
+	<script src="scripts/common.js"></script>
 </head>
 
 <body>
@@ -21,21 +22,6 @@
 </html>
 
 <script>
-
-// document.getElementById("checkout-iframe").style = "animation-name: shrink-checkout;";
-
-// Send request to server
-function AJAXPost(path, headers, params, method, callback) {
-	var request = new XMLHttpRequest();
-	request.open(method || "POST", path, true);
-	request.onreadystatechange = callback;
-
-	for (var key in headers) {
-		request.setRequestHeader(key, headers[key]);
-	}
-
-	request.send(params);
-};
 
 // Sets the text inside paymentResult div
 function setPaymentResult(text) {
@@ -60,12 +46,13 @@ function setupVerify(pHookData) {
 		// Send data to server
 		var url = "http://localhost:8000/cgi-bin/submit.py";
 		var postData = "endpoint=checkout_verify&payload=" + encodeURIComponent(pHookData.payload);
-		AJAXPost(url + "?" + postData, {"enctype":"multipart/form-data"}, "", "POST", function() {
-
-			// Display response
-			document.getElementById("verifyResult").innerHTML = this.responseText;
-		});
+		AJAXPost(url + "?" + postData, verifyCallback);
 	});
+}
+
+function verifyCallback() {
+	// Display response
+	document.getElementById("verifyResult").innerHTML = this.responseText;
 }
 
 </script>
