--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -1,6 +1,7 @@
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.3.0.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
+	<script src="scripts/common.js"></script>
 </head>
 
 <body>
@@ -13,6 +14,7 @@
 			<div class="inputHolder">ShopperReference: <input type="text" id="shopperReference" name="shopperReference" value="localhostCheckout1"/><br></div>
 			<div class="inputHolder">ShopperEmail: <input type="text" id="shopperEmail" name="shopperEmail" value="testshopper@adyen.com"/><br></div>
 			<div class="inputHolder">Channel: <input type="text" id="channel" name="channel" value="Web"/><br></div>
+			<input type="hidden" name="endpoint" value="checkout_setup"/>
 			<input type="button" class="submitBtn center" id="checkoutBtn" value="Checkout"/>
 		</form>
 	</div>
@@ -70,60 +72,39 @@ const setupCallback = function() {
 	if (this.readyState == 4) {
 		console.log(this);
 
-		// try {
-			var data = JSON.parse(this.responseText);
-			console.log(data);
+		var data = JSON.parse(this.responseText);
+		console.log(data);
 
-			// Initialize checkout
-			var checkout = chckt.checkout(data, '.checkout', sdkConfigObj);
+		// Initialize checkout
+		var checkout = chckt.checkout(data, '.checkout', sdkConfigObj);
 
-			// Handle response from initiate call
-			chckt.hooks.beforeComplete = function(pNode, pHookData){
+		// Handle response from initiate call
+		chckt.hooks.beforeComplete = function(pNode, pHookData){
 
-				// logging
-				console.log("pHookData");
-				console.log(pHookData);
-				
-				// Send data back to parent page
-				parent.setPaymentResult(pHookData.resultCode);
+			// logging
+			console.log("pHookData");
+			console.log(pHookData);
+			
+			// Send data back to parent page
+			parent.setPaymentResult(pHookData.resultCode);
 
-				if (pHookData.resultCode.toLowerCase() === "authorised") {
-					parent.setupVerify(pHookData);
-				}
+			if (pHookData.resultCode.toLowerCase() === "authorised") {
+				parent.setupVerify(pHookData);
 			}
+		}
 
-			// Other hooks
-			chckt.hooks.getDataFromSubmissionProcess = function(checkoutNode, formData) {
-				console.log("checkoutNode");
-				console.log(checkoutNode);
-				console.log("formData");
-				console.log(formData.toString());
-			}
-		// }
-		// catch (e) {
-		// 	console.log(e);
-		// 	document.getElementById("checkout").innerHTML = "this.responseText: " + this.responseText;
-		// }
+		// Other hooks
+		chckt.hooks.getDataFromSubmissionProcess = function(checkoutNode, formData) {
+			console.log("checkoutNode");
+			console.log(checkoutNode);
+			console.log("formData");
+			console.log(formData.toString());
+		}
 	}
 };
 
 function openCheckout() {
-	var inputParams = document.querySelectorAll("input[type=text]");
-
-	// Get request details from html form
-	var formString = "";
-	for (var param of inputParams) {
-		formString = formString + param.name + "=" + param.value + "&";
-	}
-	formString = formString + "endpoint=checkout_setup";
-
-	// Set parameters for request to server
-	url = "cgi-bin/submit.py";
-	headers = { "Content-Type": "application/x-www-form-urlencoded" };
-	method = "POST";
-
-	// calls async javascript function to send to server
-	parent.AJAXPost(encodeURI(url + "?" + formString), headers, {}, method, setupCallback);
+	AJAXPost(buildFormURL(), setupCallback);
 }
 
 </script>
