--- a/SecuredFieldsDirect.html
+++ b/SecuredFieldsDirect.html
@@ -2,6 +2,7 @@
 
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSecuredFields.1.1.4.js"></script>
+	<script type="text/javascript" src="scripts/common.js"></script>
 	<script type="text/javascript" src="scripts/securedFieldsDirect.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
