get rid of some of that sweet, sweet lint

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<a class="index-link" href="3DSecure.html">3D Secure</a><br>
 	<a class="index-link" href="3DSecure2.html">3D Secure 2.0 Basic</a><br>
 	<a class="index-link" href="3DSecure2Advanced.html">3D Secure 2.0 Advanced</a><br>
+	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 Advanced - Custom SDK</a><br>
 </body>
 
 </html>
