--- a/3DSecure2AdvancedCustomSDK.html
+++ b/3DSecure2AdvancedCustomSDK.html
@@ -3,7 +3,7 @@
 <head>
 	<title>3DS 2.0</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"/>
-	<script id="SDK" type="text/javascript" src="scripts/common.js"></script>
+	<script id="SDK" type="text/javascript" src="scripts/threedsSDK.0.9.5.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 
@@ -28,7 +28,7 @@
 		<label for="acquirerAgnosticAuth" style="user-select: none">Acquirer Agnostic Auth</label>
 	</div>
 
-	<button onClick="submitForm()">Authorise</button>
+	<div id="authoriseBtnHolder"></div>
 	<h3>Network activity</h3>
 	<div id="output" style="width: 50%"></div>
 	<div id="sdkContainer" style="border: 1px black solid; display: inline-block"></div>
@@ -36,21 +36,29 @@
 
 </html>
 
-<script>
+<script type="module">
 
-const NOTIFICATION_URL = SERVER_URL + "?endpoint=threeds2_result_page";
+import * as common from "./scripts/common.js";
+
+const NOTIFICATION_URL = common.SERVER_URL + "?endpoint=threeds2_result_page";
 const CACHED_THREEDS_URL = "https://pal-test.adyen.com/threeds2simulator/acs/startMethod.shtml";
 
-var globals = {};
+let globals = {};
+
+// Add submit button to DOM
+let button = document.createElement("button");
+button.onclick = submitForm;
+button.innerHTML = "Authorise";
+document.getElementById("authoriseBtnHolder").appendChild(button);
 
 // perform fingerprint via SDK on page load
 fingerprintDevice();
 function fingerprintDevice() {
 	// generate transID
-	globals.threeDSServerTransID = uuid();
+	globals.threeDSServerTransID = common.uuid();
 
 	// give the cached (hardcoded) data to the SDK
-	var sdkPromise = threedsSDK.get3DSMethodStatus(
+	let sdkPromise = threedsSDK.get3DSMethodStatus(
 		globals.threeDSServerTransID, 
 		CACHED_THREEDS_URL, 
 		NOTIFICATION_URL, 
@@ -82,12 +90,12 @@ function fingerprintDevice() {
 
 // send form data to server
 function submitForm(e) {	
-	var url = SERVER_URL + "?";
-	var jsonData = {}; // JSON object for logging
+	let url = common.SERVER_URL + "?";
+	let jsonData = {}; // JSON object for logging
 	
 	// form encode data and add to jsonData
-	var formEls = $(".formEls");
-	for (i = 0; i < formEls.length; i++) {
+	let formEls = $(".formEls");
+	for (let i = 0; i < formEls.length; i++) {
 		url = url + encodeURIComponent(formEls[i].name) + "=" + encodeURIComponent(formEls[i].value) + "&";
 		jsonData[formEls[i].name] = formEls[i].value;
 	}
@@ -172,7 +180,7 @@ function doChallenge() {
 			// redirect and hide challenge iframe
 			console.log("Challenge completed.. redirecting");
 			console.log("cres: " + getCRESFromIframe());
-			var transStatus = JSON.parse(window.atob(getCRESFromIframe())).transStatus;
+			let transStatus = JSON.parse(window.atob(getCRESFromIframe())).transStatus;
 			document.querySelector("[name=threeDSIframe]").contentWindow.location.href = document.querySelector("[name=threeDSIframe]").contentWindow.location.href + "&transStatus=" + transStatus;
 			console.log("iframe location: " + document.querySelector("[name=threeDSIframe]").contentWindow.location.href);
 		}
@@ -207,7 +215,7 @@ function handleFailedSDKChallengePromise(failedPromiseResponse) {
 // retrieve cavv and eci values
 // to potentially send to another acquirer
 function retrieve3ds2Result() {
-	url = SERVER_URL + "?endpoint=threeds2_adv_retrieve3ds2Result" + "&pspReference=" + globals.challengePspReference;
+	url = common.SERVER_URL + "?endpoint=threeds2_adv_retrieve3ds2Result" + "&pspReference=" + globals.challengePspReference;
 	$.get(url, acquirerAgnosticAuth);
 }
 
@@ -221,12 +229,12 @@ function acquirerAgnosticAuth(data) {
 	output("Request from server to Adyen", JSON.stringify(request, null, 4));
 	output("Response from Adyen to server", JSON.stringify(response, null, 4));
 
-	url = SERVER_URL + "?endpoint=threeds2_adv_acquirerAgnosticAuth" + "&eci=";
+	url = common.SERVER_URL + "?endpoint=threeds2_adv_acquirerAgnosticAuth" + "&eci=";
 }
 
 // send authorise3ds2 call with stored token
 function adyenTokenAuth(transStatus) {
-	url = SERVER_URL + "?endpoint=threeds2_auth_via_token" + "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token) + "&transStatus=" + transStatus;
+	url = common.SERVER_URL + "?endpoint=threeds2_auth_via_token" + "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token) + "&transStatus=" + transStatus;
 	$.get(url, adyenTokenAuthCallback);
 }
 
@@ -273,15 +281,15 @@ function sanitizeJSON(data) {
 
 // utility to output to web page
 function output(id, text) {
-	var containerEl = $("#output");
+	let containerEl = $("#output");
 
-	var countEl = document.createElement("div");
+	let countEl = document.createElement("div");
 	countEl.innerHTML = "--------------- " + id + " ---------------";
 	containerEl.append(countEl);
 
 	// create element to be added
-	var outputContainer = document.createElement("pre");
-	var outputEl = document.createElement("code");
+	let outputContainer = document.createElement("pre");
+	let outputEl = document.createElement("code");
 	outputContainer.appendChild(outputEl);
 	outputEl.innerHTML = text;
 	containerEl.append(outputContainer);
