--- a/SecuredFieldsSDK.html
+++ b/SecuredFieldsSDK.html
@@ -3,8 +3,8 @@
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSecuredFields.1.1.3.js"></script>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/js/checkoutInitiatePayment.min.js"></script>
-	<script type="text/javascript" src="scripts/common.js"></script>
-	<script type="text/javascript" src="scripts/securedFields.js"></script>
+	<script type="module" src="scripts/common.js"></script>
+	<script type="module" src="scripts/securedFieldsSDK.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
 
@@ -57,7 +57,9 @@
 	<div id="output"></div>
 </body>
 
-<script>
+<script type="module">
+
+import { initForms } from "./scripts/securedFieldsSDK.js";
 
 initForms();
 
