--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -1,7 +1,7 @@
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.3.0.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
-	<script src="scripts/common.js"></script>
+	<script type="module" src="./scripts/common.js"></script>
 </head>
 
 <body>
@@ -20,10 +20,12 @@
 	</div>
 </body>
 
-<script>
+<script type="module">
+
+import { AJAXPost, buildFormURL } from "./scripts/common.js";
 
 // Custom text
-var translationObject = {
+const translationObject = {
     "payButton": {
         "en-US": "Subscribe",
         "nl-NL": "Meer opties"
@@ -33,7 +35,7 @@ var translationObject = {
     }
 };
 
-var styleObject = {
+const styleObject = {
     base: {
         color: '#000',
         fontSize: '14px',
@@ -52,7 +54,7 @@ var styleObject = {
 };
 
 // Styling for checkout
-var sdkConfigObj = {
+const sdkConfigObj = {
 	context: "test",
 	paymentMethods: {
 		card: {
