finish challenge flow for custom 3DS2 SDK

--- a/3DSecure2Advanced.html
+++ b/3DSecure2Advanced.html
@@ -22,9 +22,9 @@
 		<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
 	</form>
 	<div>
-		<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth" checked="checked">
+		<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth">
 		<label for="adyenTokenAuth" style="user-select: none">Adyen Token Auth</label>
-		<input id="acquirerAgnosticAuth" type="radio" name="transactionTypeRadio" value="acquirerAgnosticAuth">
+		<input id="acquirerAgnosticAuth" type="radio" name="transactionTypeRadio" value="acquirerAgnosticAuth" checked="checked">
 		<label for="acquirerAgnosticAuth" style="user-select: none">Acquirer Agnostic Auth</label>
 	</div>
 
